...
    setMaximumDate(minimumDate ? undefined : endOfTomorrowUTC);
  };

  if (Platform.OS !== 'windows') {
    return (
      <SafeAreaView
        testID="appRootView"
        style={[
          backgroundStyle,
          {flex: 1, backgroundColor: isDarkMode ? Colors.black : Colors.white},
        ]}>
        <StatusBar barStyle="default" />
        <View>
          <View style={styles.header}>
            <ThemedText style={styles.text}>Example DateTime Picker</ThemedText>
          </View>
          <View>
            <Info
              testID={'utcTime'}
              title={'UTC Time:'}
              body={moment(date).utc().format()}
...
            <Text style={{flexShrink: 1}}>
              This is a very very very very very very long text to showcase
              behavior
            </Text>
            {show && (
              <DateTimePicker
                testID="dateTimePicker"
                timeZoneOffsetInMinutes={tzOffsetInMinutes}
                timeZoneName={tzName}
                minuteInterval={interval}
                maximumDate={maximumDate}
                minimumDate={minimumDate}
                value={date}
...
                  minDate={minDate}
                  dateFormat={dateFormat}
                  dayOfWeekFormat={dayOfWeekFormat}
                  placeholderText="select date"
                />
                <View style={{width: 200, marginTop: 15}}>
                  <Text testID="dateTimeText" style={styles.dateTimeText}>
                    {date !== undefined
                      ? moment(date).format('MM/DD/YYYY')
                      : moment().format('MM/DD/YYYY')}
                  </Text>
                  <View style={styles.resetButton}>
                    <Button title="Reset calendar" onPress={handleResetPress} />
...
